# zstd-framed

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: tests.yml
src/: async_reader.rs  async_writer.rs  buffer.rs  decoder.rs  encoder.rs  frames.rs  lib.rs  macros.rs  reader.rs  table.rs  writer.rs
src/frames/: futures.rs
src/table/: futures.rs  tokio.rs
tests/: test_async_reader_futures.proptest-regressions  test_async_reader_futures.rs  test_async_reader_tokio.proptest-regressions  test_async_reader_tokio.rs  test_async_writer_futures.rs  test_async_writer_tokio.proptest-regressions  test_async_writer_tokio.rs  test_reader.proptest-regressions  test_reader.rs  test_writer.proptest-regressions  test_writer.rs
tests/test_utils/: mod.rs
