[package]
name = "zstd-framed"
version = "0.1.0"
description = "zstd seekable format compression and decompression. Supports sync and async I/O"
repository = "https://github.com/kylewlacy/zstd-framed"
authors = ["Kyle Lacy <rust@kyle.space>"]
categories = ["compression", "asynchronous"]
keywords = ["zstd", "zstandard", "seekable"]
readme = "README.md"
license = "MIT OR Unlicense"
edition = "2021"
rust-version = "1.81"

[dependencies]
futures = { version = "0.3.31", optional = true, default-features = false, features = ["std"] }
pin-project-lite = "0.2.15"
thiserror = "1.0.68"
tokio = { version = "1.41.0", optional = true, default-features = false, features = ["io-util"] }
zstd = "0.13.2"

[dev-dependencies]
assert_matches = "1.5.0"
easy-hex = { version = "1.0.0", default-features = false }
futures = { version = "0.3.31" }
pretty_assertions = "1.4.1"
proptest = "1.5.0"
tokio = { version = "1.41.0", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
